--- a/cosmetic.css
+++ b/cosmetic.css
@@ -5,7 +5,7 @@
     margin-left: auto;
     margin-right: auto;
 }
-#rectangle{
+#service{
     width: 550px;
     height: 350px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -15,12 +15,31 @@
     line-height: 14px;
     margin-left: auto;
     margin-right: auto;
-    position: relative;
-    top: 50%;
-    left: 40%;
+    position: absolute;
+    top: 65%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    display: none;
 }
+#service:target{display: block;}
 
+#contacts{
+    width: 550px;
+    height: 350px;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: -10px 0 0 rgba(255, 255, 255, 0.8), 10px 0 0 rgba(255, 255, 255, 0.8);
+    padding: 0 10px 0 0;
+    color: #FFFFFF;
+    line-height: 14px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+#contacts:target{display: block;}
 html{
     background: url("Images/moscow.logo.png") no-repeat;
     background-position: top -20px center;
@@ -43,6 +62,7 @@ html{
     letter-spacing: .15em;
     margin-bottom: 0;
 }
+.text span{color:red}
 
 
 h2{
