--- a/cosmetic.css
+++ b/cosmetic.css
@@ -15,9 +15,9 @@
     line-height: 14px;
     margin-left: auto;
     margin-right: auto;
-    position: absolute;
-    top: 65%;
-    left: 50%;
+    position: relative;
+    top: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
     display: none;
 }
@@ -33,9 +33,9 @@
     line-height: 14px;
     margin-left: auto;
     margin-right: auto;
-    position: absolute;
-    top: 65%;
-    left: 50%;
+    position: relative;
+    top: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
     display: none;
 }
