--- a/cosmetic.css
+++ b/cosmetic.css
@@ -1,5 +1,9 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css?family=Arimo&display=swap');
+@media only screen and (max-width : 1199px) {
+.content{float: none;}
+    #wrapper{width = 100%;}
+}
 #wrapper {
     width: 700px;
     margin-left: auto;
