--- a/cosmetic.css
+++ b/cosmetic.css
@@ -1,8 +1,7 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css?family=Arimo&display=swap');
-@media only screen and (max-width : 1199px) {
 #wrapper {
-    width: 100%;
+    width: 700px;
     margin-left: auto;
     margin-right: auto;
     background-color: white;
@@ -240,3 +239,4 @@ transform: rotate(-45deg);
 .facebook a:hover {background: #3b5998; color: #fff;}
 .envelope a:hover {background: #3f729b; color: #fff;}
 .telegram a:hover {background: #249bd7; color: #fff;}
+
