--- a/mobile.css
+++ b/mobile.css
@@ -9,8 +9,8 @@
     min-width: 0;
 }
 #service, #contacts, #lips, #botulinotherapy, #mezo, #bio, #pilings{
-    width: 200px;
-    height: 300px;
+    width: 300px;
+    height: 250px;
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: -10px 0 0 rgba(255, 255, 255, 0.9), 10px 0 0 rgba(255, 255, 255, 0.9);
     padding: 0 10px 0 0;
@@ -18,7 +18,7 @@
     line-height: 14px;
     margin-left: auto;
     margin-right: auto;
-    position: absolute;
+    position: relative;
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
